# ezbake

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml  release.yml  test.yml
scripts/: Dockerfile  Dockerfile-develop  Dockerfile-multiarch  ezbake-deployment.yml  install-for-cluster.yml  install-for-namespace-admin.yml  install-for-namespace.yml  install.yml
src/: args.rs  grpc_access.rs  ingest.rs  k8s.rs  main.rs  metrics.rs  xds.rs
src/xds/: cache.rs  connection.rs  delta.rs  delta_connection.rs  resources.rs  server.rs  sotw.rs
