[package]
name = "ezbake"
version = "0.3.1"
edition = "2021"
rust-version = "1.79"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.27", features = ["derive", "wrap_help"] }
crossbeam-skiplist = "0.1"
enum-map = "2.7"
futures = "0.3"
h2 = "0.3"
http = "0.2"
kube = { version = "0.96", features = ["runtime", "client"] }
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, features = [
    "http-listener",
] }
once_cell = "1.19"
smol_str = "0.3"
thiserror = "2.0"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
tonic-reflection = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["metrics", "trace"] }
xds-api = { version = "0.1", features = ["descriptor"] }

# directly depend on k8s-openapi to specify the v1_xx feature
k8s-openapi = { version = "0.23", features = ["v1_29"] }
junction-api = { git = "https://github.com/junction-labs/junction-client", features = [
    "kube",
    "xds",
] }
crossbeam = "0.8.4"
svix-ksuid = "0.8.0"
